syntax = "proto3";

option go_package = "/broker";

package broker;

service Greeter {
    rpc SayHello2(HelloRequest) returns (HelloResponse); 
}

message HelloRequest{
    string name = 1;
}

message HelloResponse{
    string message = 1;
}